# mock-planewave-lya

./: .gitignore  LICENSE  README.md  pyproject.toml
mock_lya_forest/: __init__.py  __main__.py  cli.py  cosmology.py  generator.py  geometry.py  io.py  models.py  noise.py  waves.py
tests/: test_mock_lya_forest.py
