[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-lya-forest"
version = "0.1.0"
description = "Generate mock 3D Lyman-alpha forest fluctuations from plane-wave superpositions."
requires-python = ">=3.11"
dependencies = [
    "astropy>=7",
    "numpy>=2",
]

[project.scripts]
mock-lya-forest = "mock_lya_forest.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mock_lya_forest*"]